--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Map/LevelDevMap.LevelDevMap
 
 
 EditorStartupMap=/Game/Map/LevelDevMap.LevelDevMap
+GlobalDefaultGameMode=/Game/Blueprint/GameSystem/BP_IngameMode.BP_IngameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
