Character Higlight & Pick in progress

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,3 +17,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/FantasyMayhem")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/FantasyMayhem")
 
+[/Script/Engine.RendererSettings]
+r.StencilForLODDither=False
+r.CustomDepth=3
+
