--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,7 @@ GameDefaultMap=/Game/Map/LevelDevMap.LevelDevMap
 
 EditorStartupMap=/Game/Map/LevelDevMap.LevelDevMap
 GlobalDefaultGameMode=/Game/Blueprint/GameSystem/BP_IngameMode.BP_IngameMode_C
+GameInstanceClass=/Game/Blueprint/GameSystem/BP_GameInstance.BP_GameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
