--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/LevelDevMap.LevelDevMap
+GameDefaultMap=/Game/Map/Level_OutgameMenu.Level_OutgameMenu
 
 
 EditorStartupMap=/Game/Map/LevelDevMap.LevelDevMap
