host and join #2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -82,3 +82,7 @@ r.CustomDepth=3
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
+
