--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/LevelDevMap.LevelDevMap
+GameDefaultMap=/Game/Map/Level_OutgameMenu.Level_OutgameMenu
 
 
-EditorStartupMap=/Game/Map/LevelDevMap.LevelDevMap
+EditorStartupMap=/Game/Map/Level_OutgameMenu.Level_OutgameMenu
 GlobalDefaultGameMode=/Game/Blueprint/GameSystem/BP_IngameMode.BP_IngameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
